# yolox-coco

./: .gitattributes  .gitignore  README.md  add_permute_layer.py  generate_labels_mapping.py  generate_labels_mapping.sh  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  pyproject.toml  set_orig_model_mapping.sh  set_permuted_model_mapping.sh  upload_models.sh  upload_permuted_model.sh
data/: mock_metropolis_structure.py
mappings/: leap_mapping_permuted_model.yaml  leap_mapping_raw.yaml  leap_mapping_regular.yaml
model/: add_permute_layer.py  temp_yolox_s.onnx  yolo_nas_permuted.onnx  yolo_nas_s.h5  yolo_nas_s.onnx  yolo_nas_s_c_1.h5  yolo_nas_s_c_1.onnx  yolo_nas_s_c_1_permuted_output.h5  yolo_nas_s_permuted_output.h5  yolo_nas_s_permuted_output.onnx  yolox_s.h5  yolox_s_permuted.h5  yolox_s_permuted.onnx
src/: config.py  metrics.py  object_detection_config.yml
src/data/: posprocessing.py  preprocessing.py
src/utils/: dataclasses.py  gcs_utils.py  general_utils.py
yolonas/: config.py  custom_layers.py  metrics.py  object_detection_config.yaml  object_detection_config.yml  visualizers.py
yolonas/data/: posprocessing.py  preprocessing.py
yolonas/utils/: confusion_matrix.py  decoder.py  gcs_utils.py  general_utils.py  yolo_utils.py
yolox/: config.py  metrics.py  object_detection_config.yaml  visualizers.py
yolox/data/: posprocessing.py  preprocessing.py
yolox/utils/: confusion_matrix.py  custom_layers.py  decoder.py  gcs_utils.py  general_utils.py  yolo_utils.py  yolox_loss.py
